--- a/Quality_N750.ipynb
+++ b/Quality_N750.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMvq6qbrD3Blqvv+3XlDnN+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,12 +22,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Momentum1ab/MomentumScreener/blob/main/Quality_N750.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/aditya-2007/MomentumScreener/blob/main/Quality_N750.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -471,7 +470,7 @@
         "    'UCOBANK.NS', 'UNOMINDA.NS', 'UTIAMC.NS', 'UJJIVANSFB.NS', 'UBL.NS', 'USHAMART.NS',\n",
         "    'VGUARD.NS', 'VIPIND.NS', 'VAIBHAVGBL.NS', 'VTL.NS', 'VARROC.NS', 'MANYAVAR.NS', 'VIJAYA.NS',\n",
         "    'WELCORP.NS', 'WELSPUNLIV.NS', 'WESTLIFE.NS', 'WHIRLPOOL.NS', 'ZFCVINDIA.NS', 'ZENSARTECH.NS',\n",
-        "    'ECLERX.NS']  # Add more symbols as needed\n",
+        "    'ECLERX.NS', '360ONE.NS']  # Add more symbols as needed\n",
         "\n",
         "def calculate_metrics(symbol):\n",
         "    stock = yf.Ticker(symbol)\n",
