added nifty 200 list

--- a/1,3,6m_MomentumScreener_V2.ipynb
+++ b/1,3,6m_MomentumScreener_V2.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/aditya-2007/MomentumScreener/blob/main/1%2C3%2C6m_MomentumScreener_V2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/aditya-2007/MomentumScreener/blob/develop/1%2C3%2C6m_MomentumScreener_V2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -47,37 +47,19 @@
         "import matplotlib.pyplot as plt\n",
         "from matplotlib.table import Table\n",
         "\n",
-        "# List of tickers\n",
-        "tickers = [\"RELIANCE.NS\", \"TCS.NS\", \"HDFCBANK.NS\", \"BHARTIARTL.NS\", \"ICICIBANK.NS\", \"SBIN.NS\", \"INFY.NS\",\n",
-        "           \"LICI.NS\", \"HINDUNILVR.NS\", \"ITC.NS\", \"LT.NS\", \"BAJFINANCE.NS\", \"MARUTI.NS\", \"HCLTECH.NS\",\n",
-        "           \"ADANIENT.NS\", \"AXISBANK.NS\", \"SUNPHARMA.NS\", \"TATAMOTORS.NS\", \"TATAMTRDVR.NS\", \"M&M.NS\",\n",
-        "           \"NTPC.NS\", \"KOTAKBANK.NS\", \"ONGC.NS\", \"HAL.NS\", \"DMART.NS\", \"TITAN.NS\", \"ULTRACEMCO.NS\",\n",
-        "           \"ADANIPORTS.NS\", \"ADANIPOWER.NS\", \"ADANIGREEN.NS\", \"COALINDIA.NS\", \"POWERGRID.NS\", \"ASIANPAINT.NS\",\n",
-        "           \"BAJAJ-AUTO.NS\", \"WIPRO.NS\", \"BAJAJFINSV.NS\", \"SIEMENS.NS\", \"NESTLEIND.NS\", \"IOC.NS\", \"IRFC.NS\",\n",
-        "           \"JIOFIN.NS\", \"TATASTEEL.NS\", \"JSWSTEEL.NS\", \"DLF.NS\", \"BEL.NS\", \"VBL.NS\", \"TRENT.NS\", \"VEDL.NS\",\n",
-        "           \"ABB.NS\", \"INDIGO.NS\", \"ZOMATO.NS\", \"GRASIM.NS\", \"PFC.NS\", \"PIDILITIND.NS\", \"AMBUJACEM.NS\",\n",
-        "           \"HINDALCO.NS\", \"LTIM.NS\", \"GODREJCP.NS\", \"SBILIFE.NS\", \"LODHA.NS\", \"TATAPOWER.NS\", \"BANKBARODA.NS\",\n",
-        "           \"GAIL.NS\", \"PNB.NS\", \"TECHM.NS\", \"BRITANNIA.NS\", \"RECLTD.NS\", \"EICHERMOT.NS\", \"BPCL.NS\",\n",
-        "           \"HDFCLIFE.NS\", \"CIPLA.NS\", \"DIVISLAB.NS\", \"HAVELLS.NS\", \"INDUSINDBK.NS\", \"TVSMOTOR.NS\",\n",
-        "           \"ADANIENSOL.NS\", \"CHOLAFIN.NS\", \"UNIONBANK.NS\", \"HEROMOTOCO.NS\", \"JSWENERGY.NS\", \"DABUR.NS\",\n",
-        "           \"TATACONSUM.NS\", \"CANBK.NS\", \"ATGL.NS\", \"ZYDUSLIFE.NS\", \"MOTHERSON.NS\", \"IDEA.NS\", \"JINDALSTEL.NS\",\n",
-        "           \"NHPC.NS\", \"POLYCAB.NS\", \"CGPOWER.NS\", \"DRREDDY.NS\", \"CUMMINSIND.NS\", \"BHEL.NS\", \"TORNTPHARM.NS\",\n",
-        "           \"SHREECEM.NS\", \"SHRIRAMFIN.NS\", \"INDUSTOWER.NS\", \"BAJAJHLDNG.NS\", \"IDBI.NS\", \"BOSCHLTD.NS\",\n",
-        "           \"APOLLOHOSP.NS\", \"MANKIND.NS\", \"MARICO.NS\", \"INDHOTEL.NS\", \"ICICIPRULI.NS\", \"HDFCAMC.NS\",\n",
-        "           \"ICICIGI.NS\", \"COLPAL.NS\", \"NAUKRI.NS\", \"MAXHEALTH.NS\", \"GODREJPROP.NS\", \"IRCTC.NS\", \"RVNL.NS\",\n",
-        "           \"TIINDIA.NS\", \"NMDC.NS\", \"LUPIN.NS\", \"HINDPETRO.NS\", \"AUROPHARMA.NS\", \"BHARATFORG.NS\",\n",
-        "           \"SUPREMEIND.NS\", \"OFSS.NS\", \"YESBANK.NS\", \"INDIANB.NS\", \"TORNTPOWER.NS\", \"PRESTIGE.NS\",\n",
-        "           \"OBEROIRLTY.NS\", \"SRF.NS\", \"SBICARD.NS\", \"ASHOKLEY.NS\", \"SUZLON.NS\", \"OIL.NS\", \"CONCOR.NS\",\n",
-        "           \"MAZDOCK.NS\", \"SAIL.NS\", \"BALKRISIND.NS\", \"ABCAPITAL.NS\", \"DIXON.NS\", \"PERSISTENT.NS\", \"ALKEM.NS\",\n",
-        "           \"JSWINFRA.NS\", \"POLICYBZR.NS\", \"ASTRAL.NS\", \"BERGEPAINT.NS\", \"PIIND.NS\", \"BANKINDIA.NS\",\n",
-        "           \"IDFCFIRSTB.NS\", \"MRF.NS\", \"BDL.NS\", \"SJVN.NS\", \"GMRINFRA.NS\", \"TATACOMM.NS\", \"PATANJALI.NS\",\n",
-        "           \"LTTS.NS\", \"AUBANK.NS\", \"NYKAA.NS\", \"VOLTAS.NS\", \"MAHABANK.NS\", \"ACC.NS\", \"MPHASIS.NS\", \"FACT.NS\",\n",
-        "           \"PETRONET.NS\", \"APLAPOLLO.NS\", \"TATAELXSI.NS\", \"ESCORTS.NS\", \"TATATECH.NS\", \"PAGEIND.NS\",\n",
-        "           \"KALYANKJIL.NS\", \"LTF.NS\", \"KPITTECH.NS\", \"UPL.NS\", \"GUJGASLTD.NS\", \"BIOCON.NS\", \"FEDERALBNK.NS\",\n",
-        "           \"SONACOMS.NS\", \"LICHSGFIN.NS\", \"BSE.NS\", \"COFORGE.NS\", \"POONAWALLA.NS\", \"FORTIS.NS\", \"M&MFIN.NS\",\n",
-        "           \"JUBLFOOD.NS\", \"DALBHARAT.NS\", \"ABFRL.NS\", \"IGL.NS\", \"MFSL.NS\", \"BANDHANBNK.NS\", \"DEEPAKNTR.NS\",\n",
-        "           \"APOLLOTYRE.NS\", \"GLAND.NS\", \"IPCALAB.NS\", \"DELHIVERY.NS\", \"SUNTV.NS\", \"SYNGENE.NS\", \"TATACHEM.NS\",\n",
-        "           \"PAYTM.NS\", \"LAURUSLABS.NS\", \"LALPATHLAB.NS\", \"PEL.NS\", \"ZEEL.NS\",\"UNITDSPR.NS\"]\n",
+        "# List of tickers - Nifty 200 list\n",
+        "tickers = ['ABB.NS','ACC.NS','APLAPOLLO.NS','AUBANK.NS','ADANIENSOL.NS','ADANIENT.NS','ADANIGREEN.NS','ADANIPORTS.NS','ADANIPOWER.NS','ATGL.NS','ABCAPITAL.NS','ABFRL.NS','ALKEM.NS','AMBUJACEM.NS','APOLLOHOSP.NS','APOLLOTYRE.NS',\n",
+        "           'ASHOKLEY.NS','ASIANPAINT.NS','ASTRAL.NS','AUROPHARMA.NS','DMART.NS','AXISBANK.NS','BSE.NS','BAJAJ-AUTO.NS','BAJFINANCE.NS','BAJAJFINSV.NS','BAJAJHLDNG.NS','BALKRISIND.NS','BANDHANBNK.NS','BANKBARODA.NS','BANKINDIA.NS'\n",
+        "           ,'MAHABANK.NS','BDL.NS','BEL.NS','BHARATFORG.NS','BHEL.NS','BPCL.NS','BHARTIARTL.NS','BHARTIHEXA.NS','BIOCON.NS','BOSCHLTD.NS','BRITANNIA.NS','CGPOWER.NS','CANBK.NS','CHOLAFIN.NS','CIPLA.NS','COALINDIA.NS','COCHINSHIP.NS',\n",
+        "           'COFORGE.NS','COLPAL.NS','CONCOR.NS','CUMMINSIND.NS','DLF.NS','DABUR.NS','DELHIVERY.NS','DIVISLAB.NS','DIXON.NS','DRREDDY.NS','EICHERMOT.NS','ESCORTS.NS','EXIDEIND.NS','NYKAA.NS','FEDERALBNK.NS','FACT.NS','GAIL.NS',\n",
+        "           'GMRAIRPORT.NS','GODREJCP.NS','GODREJPROP.NS','GRASIM.NS','HCLTECH.NS','HDFCAMC.NS','HDFCBANK.NS','HDFCLIFE.NS','HAVELLS.NS','HEROMOTOCO.NS','HINDALCO.NS','HAL.NS','HINDPETRO.NS','HINDUNILVR.NS','HINDZINC.NS','HUDCO.NS',\n",
+        "           'ICICIBANK.NS','ICICIGI.NS','ICICIPRULI.NS','IDBI.NS','IDFCFIRSTB.NS','IRB.NS','ITC.NS','INDIANB.NS','INDHOTEL.NS','IOC.NS','IOB.NS','IRCTC.NS','IRFC.NS','IREDA.NS','IGL.NS','INDUSTOWER.NS','INDUSINDBK.NS','NAUKRI.NS','INFY.NS',\n",
+        "           'INDIGO.NS','JSWENERGY.NS','JSWINFRA.NS','JSWSTEEL.NS','JINDALSTEL.NS','JIOFIN.NS','JUBLFOOD.NS','KPITTECH.NS','KALYANKJIL.NS','KOTAKBANK.NS','LTF.NS','LICHSGFIN.NS','LTIM.NS','LT.NS','LICI.NS','LUPIN.NS','MRF.NS','LODHA.NS',\n",
+        "           'M&MFIN.NS','M&M.NS','MRPL.NS','MANKIND.NS','MARICO.NS','MARUTI.NS','MFSL.NS','MAXHEALTH.NS','MAZDOCK.NS','MPHASIS.NS','MUTHOOTFIN.NS','NHPC.NS','NLCINDIA.NS','NMDC.NS','NTPC.NS','NESTLEIND.NS','OBEROIRLTY.NS','ONGC.NS','OIL.NS',\n",
+        "           'PAYTM.NS','OFSS.NS','POLICYBZR.NS','PIIND.NS','PAGEIND.NS','PATANJALI.NS','PERSISTENT.NS','PETRONET.NS','PHOENIXLTD.NS','PIDILITIND.NS','POLYCAB.NS','POONAWALLA.NS','PFC.NS','POWERGRID.NS','PRESTIGE.NS','PNB.NS','RECLTD.NS',\n",
+        "           'RVNL.NS','RELIANCE.NS','SBICARD.NS','SBILIFE.NS','SJVN.NS','SRF.NS','MOTHERSON.NS','SHREECEM.NS','SHRIRAMFIN.NS','SIEMENS.NS','SOLARINDS.NS','SONACOMS.NS','SBIN.NS','SAIL.NS','SUNPHARMA.NS','SUNDARMFIN.NS','SUPREMEIND.NS','SUZLON.NS',\n",
+        "           'TVSMOTOR.NS','TATACHEM.NS','TATACOMM.NS','TCS.NS','TATACONSUM.NS','TATAELXSI.NS','TATAMOTORS.NS','TATAPOWER.NS','TATASTEEL.NS','TATATECH.NS','TECHM.NS','TITAN.NS','TORNTPHARM.NS','TORNTPOWER.NS','TRENT.NS','TIINDIA.NS','UPL.NS',\n",
+        "           'ULTRACEMCO.NS','UNIONBANK.NS','UNITDSPR.NS','VBL.NS','VEDL.NS','IDEA.NS','VOLTAS.NS','WIPRO.NS','YESBANK.NS','ZOMATO.NS','ZYDUSLIFE.NS']\n",
         "\n",
         "# Function to fetch historical data\n",
         "def get_data(ticker, start_date, end_date):\n",
@@ -207,7 +189,7 @@
         },
         "outputId": "a77c8064-94ad-4e03-ba18-13c0ae7124dc"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
