--- a/1,3,6m_MomentumScreener_V2.ipynb
+++ b/1,3,6m_MomentumScreener_V2.ipynb
@@ -48,8 +48,7 @@
         "from matplotlib.table import Table\n",
         "\n",
         "# List of tickers - Nifty 200 list\n",
-        "'''\n",
-        "tickers = ['ABB.NS','ACC.NS','APLAPOLLO.NS','AUBANK.NS','ADANIENSOL.NS','ADANIENT.NS','ADANIGREEN.NS','ADANIPORTS.NS','ADANIPOWER.NS','ATGL.NS','ABCAPITAL.NS','ABFRL.NS','ALKEM.NS','AMBUJACEM.NS','APOLLOHOSP.NS','APOLLOTYRE.NS',\n",
+        "'''tickers = ['ABB.NS','ACC.NS','APLAPOLLO.NS','AUBANK.NS','ADANIENSOL.NS','ADANIENT.NS','ADANIGREEN.NS','ADANIPORTS.NS','ADANIPOWER.NS','ATGL.NS','ABCAPITAL.NS','ABFRL.NS','ALKEM.NS','AMBUJACEM.NS','APOLLOHOSP.NS','APOLLOTYRE.NS',\n",
         "           'ASHOKLEY.NS','ASIANPAINT.NS','ASTRAL.NS','AUROPHARMA.NS','DMART.NS','AXISBANK.NS','BSE.NS','BAJAJ-AUTO.NS','BAJFINANCE.NS','BAJAJFINSV.NS','BAJAJHLDNG.NS','BALKRISIND.NS','BANDHANBNK.NS','BANKBARODA.NS','BANKINDIA.NS'\n",
         "           ,'MAHABANK.NS','BDL.NS','BEL.NS','BHARATFORG.NS','BHEL.NS','BPCL.NS','BHARTIARTL.NS','BHARTIHEXA.NS','BIOCON.NS','BOSCHLTD.NS','BRITANNIA.NS','CGPOWER.NS','CANBK.NS','CHOLAFIN.NS','CIPLA.NS','COALINDIA.NS','COCHINSHIP.NS',\n",
         "           'COFORGE.NS','COLPAL.NS','CONCOR.NS','CUMMINSIND.NS','DLF.NS','DABUR.NS','DELHIVERY.NS','DIVISLAB.NS','DIXON.NS','DRREDDY.NS','EICHERMOT.NS','ESCORTS.NS','EXIDEIND.NS','NYKAA.NS','FEDERALBNK.NS','FACT.NS','GAIL.NS',\n",
@@ -60,8 +59,7 @@
         "           'PAYTM.NS','OFSS.NS','POLICYBZR.NS','PIIND.NS','PAGEIND.NS','PATANJALI.NS','PERSISTENT.NS','PETRONET.NS','PHOENIXLTD.NS','PIDILITIND.NS','POLYCAB.NS','POONAWALLA.NS','PFC.NS','POWERGRID.NS','PRESTIGE.NS','PNB.NS','RECLTD.NS',\n",
         "           'RVNL.NS','RELIANCE.NS','SBICARD.NS','SBILIFE.NS','SJVN.NS','SRF.NS','MOTHERSON.NS','SHREECEM.NS','SHRIRAMFIN.NS','SIEMENS.NS','SOLARINDS.NS','SONACOMS.NS','SBIN.NS','SAIL.NS','SUNPHARMA.NS','SUNDARMFIN.NS','SUPREMEIND.NS','SUZLON.NS',\n",
         "           'TVSMOTOR.NS','TATACHEM.NS','TATACOMM.NS','TCS.NS','TATACONSUM.NS','TATAELXSI.NS','TATAMOTORS.NS','TATAPOWER.NS','TATASTEEL.NS','TATATECH.NS','TECHM.NS','TITAN.NS','TORNTPHARM.NS','TORNTPOWER.NS','TRENT.NS','TIINDIA.NS','UPL.NS',\n",
-        "           'ULTRACEMCO.NS','UNIONBANK.NS','UNITDSPR.NS','VBL.NS','VEDL.NS','IDEA.NS','VOLTAS.NS','WIPRO.NS','YESBANK.NS','ZOMATO.NS','ZYDUSLIFE.NS']\n",
-        "'''\n",
+        "           'ULTRACEMCO.NS','UNIONBANK.NS','UNITDSPR.NS','VBL.NS','VEDL.NS','IDEA.NS','VOLTAS.NS','WIPRO.NS','YESBANK.NS','ZOMATO.NS','ZYDUSLIFE.NS']'''\n",
         "tickers = ['ABB.NS','ACC.NS']\n",
         "\n",
         "# Function to fetch historical data\n",
@@ -128,6 +126,7 @@
         "\n",
         "# Convert summary to DataFrame\n",
         "df_summary = pd.DataFrame(summary)\n",
+        "print('printing data summary')\n",
         "print(df_summary)\n",
         "\n",
         "# Round off returns to 1 decimal place\n",
